--- a/css card hover/index.html
+++ b/css card hover/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css card hover effect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="center">
+        <div class="card">
+            <div class="body">
+                <div class="user-card">
+                    <div class="center">Company Name</div>
+                    <div class="center">Position</div>
+                    <img src="" alt="human">
+                </div>
+                <div class="more-info">
+                    <h1>khemraj Giri</h1>
+                    <div class="info">
+                        <span>Company Name</span>
+                        <span>Joined January 2022</span>
+                    </div>
+                    <div class="info">
+                        <span>Position/role</span>
+                        <span>city country</span>
+                    </div>
+                    <div class="stats">
+                        <div>
+                            <div class="title">Awards</div>
+                            <div class="value">11</div>     
+                        </div>
+                        <div>
+                            <div class="title">projects</div>
+                            <div class="value">11</div>     
+                        </div>
+                        <div>
+                            <div class="title">sales</div>
+                            <div class="value">11</div>     
+                        </div>
+                        <div>
+                            <div class="title">coffee</div>
+                            <div name="Infinite"class="value">infinity</div>     
+                        </div>
+                    </div>
+                </div>
+                <div class="general">
+                    <h2>khemraj Giri</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolores quaerat obcaecati debitis quis minima illo id aperiam quidem dolore nam distinctio provident quisquam nemo officiis voluptatem doloribus, esse perspiciatis!</p>
+                    <span class="more">keep your mouse overt the card for more info</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
