--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -27,7 +27,22 @@
         Scissors
     </button>
 
+    <button onclick="
+    score.losses = 0;
+    score.wins = 0;
+    score.ties = 0;
+
+    
+    ">
+        Reset button
+    </button>
+
     <script>
+        const score = {
+            wins: 0,
+            losses: 0,
+            ties: 0
+        };
         function playgame(playerMove){
             const computerMove = pickComputerMove();
             //console.log(computermove);
@@ -58,7 +73,17 @@
                 }
             }
 
-        alert(`you picked ${playerMove}. Computer picked ${computermove}. ${result}`);
+            if(result === 'you win'){
+                score.wins++;
+            } else if(result === 'you loose'){
+                score.losses++;
+            } else if(result === 'tie'){
+                score.ties++;
+            }
+            
+
+        alert(`you picked ${playerMove}. Computer picked ${computermove}. ${result}
+        Wins: ${score.wins}, Looses: ${score.losses}, Ties: ${score.ties}`);
         }
 
         let computermove = ' ';
