--- a/HTML tags/index.html
+++ b/HTML tags/index.html
@@ -23,7 +23,7 @@
 
         <!-- TEXT TAGS -->
         <section id="text">
-            <h2>Text Formatting Tags</h2>
+            <h2>Text Formatting Tags </h2>
             <p>This is a <strong>paragraph</strong> with <em>emphasis</em>, <b>bold</b>, <i>italic</i>,
                 <u>underline</u>, <mark>highlight</mark>, and <small>small text</small>.</p>
             <p>Subscript: H<sub>2</sub>O | Superscript: 2<sup>2</sup></p>
@@ -57,7 +57,7 @@
 
             <video controls width="320" height="240">
                 <source src="video.mp4" type="video/mp4">
-                Your browser does not support video.
+                Sorry, Your browser does not support video.
             </video>
             <hr>
 
@@ -117,7 +117,7 @@
         <!-- TABLE TAGS -->
         <section id="table">
             <h2>Table Tags</h2>
-            <table border="1">
+            <table border="1" >
                 <caption>Student Marks</caption>
                 <thead>
                     <tr>
@@ -149,6 +149,7 @@
 
 
         <!-- SEMANTIC TAGS -->
+        
         <section id="semantic">
             <h2>Semantic Tags</h2>
             <article>
