rename and conflict solve

--- a/email-validator/index.html
+++ b/email-validator/index.html
@@ -16,9 +16,9 @@
                 <img src="img/email.svg" alt="email svg">
                <span>iValidate</span></div>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
-                <li><a href="/">Contact Us</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +45,7 @@
     <footer>
         Copyright | iValidate.com | All Rights reserved
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
