update output type

--- a/cricket/index.html
+++ b/cricket/index.html
@@ -34,13 +34,16 @@
     Showresult('stump',computerChoice,resultMsg)
     "><img src="images/stump.png" alt="stump img" class="choice-img"></button>
 
-    <button onclick="
+    <div>
+        <button onclick="
     localStorage.clear();
     resetScore(scoreSTR);
     ">Reset</button>
 
     <h3 id="userMove"></h3>
     <h3 id="computerMove"></h3>
+
+    </div>
     <h3 id="result"></h3>
     <h3 id="score"></h3>
 
